# durs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  demo.tape
.github/workflows/: publish.yml  release.yml
completions/: _durs  _durs.ps1  durs.bash  durs.elv  durs.fish
config/: config.toml
man-page/: durs.1
scripts/: release-version.sh
src/: cli.rs  config.rs  main.rs  utils.rs
tests/: test_exact_output.rs  test_flags.rs  tests_symlinks.rs
