[package]
name = "durs"
description = "Durs: A fast, intuitive disk usage analyzer in Rust. Quickly assess file system space with efficient, clear visualizations and insights."
version = "0.1.7"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://trinhminhtriet.com"
repository = "https://github.com/trinhminhtriet/durs"
keywords = ["du", "cli", "disk", "disk-usage"]
categories = ["command-line-utilities"]
license = "MIT"

[badges]
travis-ci = { repository = "https://travis-ci.org/trinhminhtriet/durs" }

[[bin]]
name = "durs"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
ansi_term = "0.12"
clap = "4.5"
lscolors = "0.13"
terminal_size = "0.4"
unicode-width = "0.1"
rayon = "1"
thousands = "0.2"
stfu8 = "0.2"
regex = "1"
config-file = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5"
sysinfo = "0.33"
ctrlc = "3.4"
chrono = "0.4"

[target.'cfg(not(target_has_atomic = "64"))'.dependencies]
portable-atomic = "1.10"

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1"
filesize = "0.2.0"

[dev-dependencies]
assert_cmd = "2"
tempfile = "=3"

[build-dependencies]
clap = "4.5"
clap_complete = "4.5"
clap_mangen = "0.2"

[[test]]
name = "integration"
path = "tests/tests.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/durs-v{ version }-{ target }{ archive-suffix }"
bin-dir = "durs-v{ version }-{ target }/{ bin }{ binary-ext }"

[package.metadata.deb]
section = "utils"
assets = [
  [
    "target/release/durs",
    "usr/bin/",
    "755",
  ],
  [
    "LICENSE",
    "usr/share/doc/durs/",
    "644",
  ],
  [
    "README.md",
    "usr/share/doc/durs/README",
    "644",
  ],
  [
    "man-page/durs.1",
    "usr/share/man/man1/durs.1",
    "644",
  ],
  [
    "completions/durs.bash",
    "usr/share/bash-completion/completions/durs",
    "644",
  ],
]
